# adsp-genai-final-bfgn

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: test_graph.ipynb
notebooks/data/chroma_index/: chroma.sqlite3
scripts/: RAG_Eval.ipynb  RAG_Eval.py  create_image_only_index.py  create_multimodal_index.py  create_text_only_index.py  preload_data.py  preprocess_product_data.py  test_text_only_search.py
src/conv_ai_ecommerce/data_ingestion/: chroma_loader.py  clip_embeddings.py  embedding_utils.py
src/conv_ai_ecommerce/utils/: chroma_utils.py  load_utils.py  response_utils.py
src/conv_ai_ecommerce/vlrag_framework/: graph.py  prompts.py
ui/: app.py
